# lab-acoustic

./: .gitignore  README.md  env.yml  pyproject.toml
230731_ドップラスペクトル_学生さん送付用/: calibPh.py  dopplerSin.py  dplr.py
master_positioning/: __init__.py  create_db.py  estimate.py  get_spectrum.py  make_wave.py  readwav.py  reference_db.py  tools.py
notebook/: agc-off-test.ipynb  ampli-revision.ipynb  cp_estimate.ipynb  direction-distance.ipynb  first_2d.ipynb  height_sandbox.ipynb  make-poster-fig.ipynb  master-sample.ipynb  mic-angle-10deg.ipynb  mic-angle-spectrum.ipynb  mic-revision.ipynb  mic-spectrum.ipynb  non-audible-change-freq.ipynb  non-audible-pos-mic-collection.ipynb  non-audible-pos.ipynb  phone-directivity.ipynb  phone-mic-angle.ipynb  phone-pos-noise.ipynb  phone-pos-with-revision.ipynb  phone-pos-without-revision.ipynb  playground.ipynb  pos-3d-first.ipynb  pos-phone-agc-off.ipynb  pos_3d_first_organize.ipynb  positioning-reflect-ceiling.ipynb  positioning-reflect-fingerprint.ipynb  positioning-tdoa-all.ipynb  positioning-tdoa-band.ipynb  positioning_without_mic_revision.ipynb  reflect-ceiling-first.ipynb  sandbox-short-signal.ipynb  sandbox.ipynb  simulate_ipin.ipynb  slide.mplstyle  snr.ipynb  test18-distance-amplitude.ipynb
positioning/: chirp_exp.py  create_db.py  estimate.py  get_spectrum_amplitude.py  make_wave.py  positioning.py  readwav.py  sound_db.py  tools.py
